Minor fix - adjusted y value for search icon to account for shape making it look off-center when rotated

--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -24,7 +24,7 @@ i {
     &::after {
         content: "\26B2";
         font-weight: 700;
-        transform: rotate(-45deg) scale(1.15);
+        transform: rotate(-45deg) scale(1.15) translateY(-10%);
     }
 }
 
